# INVSC

./: .gitignore  LICENSE  README.md  output.txt  prompt.txt  pyproject.toml
.bsp/: scala-cli.json
.metals/: metals.lock.db  metals.mv.db
.scala-build/: ide-envs.json  ide-inputs.json
.scala-build/.bloop/: Invcc_d5c0a6989e-test.json  Invcc_d5c0a6989e.json
.scala-build/.bloop/Invcc_d5c0a6989e/bloop-internal-classes/main-hI8LPtROTuWLFxVHrV5C6A==/: q2.tasty  q6.tasty  q9$package.tasty
.scala-build/Invcc_d5c0a6989e/classes/main/: BinarySearch.tasty  BubbleSortBad.tasty
examples/: BinarySearch.scala  BubbleSortBad.scala  MaxSegSum.scala  q10.scala  q2.scala  q6.scala  q9.scala
invsc/: __init__.py  __main__.py  actions.py  cli.py  compiler.py  config.py  formatter.py  gpt_client.py  prompt.txt
invsc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
